<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_contenedor"
    tools:context="cl.teparatres.controlcontainer.Activities.ContenedorActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="modo"
                android:id="@+id/lblModoIngreso" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtContainer"
                android:hint="@string/ph_busca_contenedor"
                android:layout_weight="0.90"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/lbl_buscar"
                android:textColor="@color/blanco"
                android:drawableLeft="@mipmap/iconbusca"
                android:background="@drawable/border_radius"
                android:id="@+id/btnBuscar"
                android:paddingRight="10dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:layout_weight="0.1"
                android:layout_gravity="center_vertical"
                android:contextClickable="false"
                android:textSize="@dimen/text_button_buscar" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:id="@+id/tableCabecera"
            android:layout_marginTop="20dp"
            android:background="@color/gris_oscuro"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/morado">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/header_principal"
                    android:id="@+id/textView"
                    android:textColor="@color/blanco"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/header_id_contenedor"
                        android:id="@+id/tvTitulo1"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:layout_weight="1.6" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/header_numero_file"
                        android:id="@+id/tvTitulo4"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1.8" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/header_estado"
                        android:id="@+id/tvTitulo2"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1.6" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_listado"
            android:focusable="false"/>

    </LinearLayout>

</RelativeLayout>
