<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="false"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgLogo"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:contentDescription="Logo empresa" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#f1f3f5"
                android:layout_marginTop="10dp" />





            <TextView
                android:text="@string/titulo_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/amarillo"
                android:textSize="@dimen/dim_titulo_app"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/tvTitulo"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:layout_marginTop="30dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_usuario"
                    android:id="@+id/tvUsuario"
                    android:textColor="@color/azul"
                    android:textStyle="bold"
                    android:textSize="@dimen/dim_label_login"
                    android:gravity="center_vertical"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/txtUsuario"
                    android:background="@null"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:layout_marginTop="30dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_password"
                    android:id="@+id/tvPassword"
                    android:textColor="@color/azul"
                    android:textStyle="bold"
                    android:textSize="@dimen/dim_label_login"
                    android:gravity="center_vertical"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/txtPassword"
                    android:background="@null"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:layout_marginTop="30dp"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_modo_offline"
                    android:id="@+id/lblModoOffline"
                    android:textColor="@color/amarillo"
                    android:textSize="@dimen/dim_label_olvido"
                    android:layout_marginRight="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/lbl_ingresar"
                    android:id="@+id/btnLogin"

                    android:textColor="@color/blanco"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/border_radius"
                    android:textSize="@dimen/dim_label_button"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
